# keel

./: .gitignore  AUTONOMY_CHARTER.md  CLAUDE.md  Cargo.toml  KEEL_ARCHITECTURE.md  README.md
_brainstorm/: KEEL_HINDSIGHT_REVIEW_by_fable5.md
_brainstorm/GLM/: 00_BIG_PICTURE.md  01_agent_top-level.md  02_agent_run-state.md  03_agent_crates.md  04_agent_docs.md  05_agent_test-build-ci.md  06_agent_git-history.md  README.md
_run_state/: AUTOSTART.md  AUTOSTART_SETUP.md  GENESIS-ARC.md  INIT_PROMPT.md  KEEL_GENESIS_TRANSCRIPT_ASSESSMENT.md  NEXT_SESSION.md  OPERATOR_DIRECTIVE.md  REHYDRATE.md  ROADMAP.md  SESSION-ACCOUNT-2026-06-14.md  SITREP-2026-07-06.md  STATE.md  WAKE_UP.md  WAKE_UP_part1.md  WAKE_UP_part2.md  WAKE_UP_part3.md  WAKE_UP_part4.md  WAKE_UP_part5.md  WORKLOG.md  trajectory-account.md
_run_state/handoff/: forward-arc.md  recent-turns.md
chunker/: README.md  chunk.cmd  chunker.py  estimate_tokens.py
crates/keel/: Cargo.toml
crates/keel-adapters/: Cargo.toml
crates/keel-adapters/src/: anthropic.rs  deepseek.rs  embed.rs  lib.rs  local_llama.rs  mic.rs  openai.rs  rerank.rs  screen.rs  wav.rs  whisper.rs
crates/keel-contracts/: Cargo.toml
crates/keel-contracts/examples/: golden_freeze.rs
crates/keel-contracts/src/: errors.rs  lib.rs  traits.rs  types.rs
crates/keel-contracts/tests/: golden_freeze.rs
crates/keel-kernel/: Cargo.toml
crates/keel-kernel/src/: chain.rs  context.rs  engine.rs  lib.rs  lifecycle.rs  manifest.rs  registry.rs
crates/keel-middleware/: Cargo.toml
crates/keel-middleware/src/: audit.rs  cost.rs  lib.rs  privacy.rs
crates/keel-services/: Cargo.toml
crates/keel-services/src/: amplify.rs  distill.rs  driver.rs  lib.rs  maintenance.rs  memory.rs  perception.rs  privacy_model.rs  recall.rs  router.rs  trace_sink.rs  verifier.rs
crates/keel-store/: Cargo.toml
crates/keel-store/src/: lib.rs
crates/keel/src/: lib.rs  main.rs
docs/: AUDIT-2026-06-15.md  DONE-REVIEW.md  PROJECT-STATE.md  RUN-2026-06-15.md  conformance-coverage.md  flywheel-ignition.md
docs/proposals/: golden-recall-set.md  memory-autopilot.md  perpetual-memory.md  privacy-rung3.md  sextant-on-keel.md
tests/amplify/: amplify-set.json
tests/golden/: .frozen.json  golden.json
tests/privacy/: rung3-set.json
tests/recall/: golden-recall.json
tools/: keel-autoloop.ps1
