[package]
name = "keel-adapters"
description = "KEEL L2 — tier adapters under OpenAI Chat Completions (local_llama; deepseek/anthropic/whisper next)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
keel-contracts = { path = "../keel-contracts" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
