[package]
name = "keel-middleware"
description = "KEEL L3 — invariant middleware (I1 audit · I3 privacy · I4 cost) on the kernel chain."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
keel-contracts = { path = "../keel-contracts" }
keel-kernel = { path = "../keel-kernel" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
