[package]
name = "keel-services"
description = "KEEL L4 — services (route · amplify · verify · memory · perception · driver). Composes adapters under middleware."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
keel-contracts = { path = "../keel-contracts" }
async-trait = "0.1"
regex = "1"
serde_json = "1"
# default-features OFF strips resolve-http(reqwest)/resolve-file/tls(aws-lc-rs+cmake): the
# SchemaOracle validates in-memory only — no network egress (I3) in a safety-critical oracle.
jsonschema = { version = "0.46.5", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
