[package]
name = "keel-services"
description = "KEEL L4 — services (route · amplify · verify · memory · perception · driver). Composes adapters under middleware."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
keel-contracts = { path = "../keel-contracts" }
keel-adapters = { path = "../keel-adapters" }  # the whisper organ for the hear() retina (services compose adapters, canon 6)
keel-middleware = { path = "../keel-middleware" }  # reuse Redactor in the TraceSink scrub (services may import middleware, canon 6)
async-trait = "0.1"
regex = "1"
serde = { version = "1", features = ["derive"] }  # Episode register derives (A7.2); already in the tree via contracts — no new external dep
serde_json = "1"
# default-features OFF strips resolve-http(reqwest)/resolve-file/tls(aws-lc-rs+cmake): the
# SchemaOracle validates in-memory only — no network egress (I3) in a safety-critical oracle.
jsonschema = { version = "0.46.5", default-features = false }

[features]
# the listen() retina: pull keel-adapters' cpal microphone capture organ (canon §12 ears). Off by
# default — the minimal-core thesis (a consumer that never hears pays no audio dependency).
mic = ["keel-adapters/mic"]
# the see_screen() retina: pull keel-adapters' xcap screen capture organ (canon §12 eyes). Off by
# default (minimal-core, §3.5).
screen = ["keel-adapters/screen"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
