[package]
name = "keel"
description = "KEEL L5 — apps: the daily-driver CLI and the OpenAI-compatible server, sharing one wiring lib."
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "keel"
path = "src/lib.rs"

[[bin]]
name = "keel"
path = "src/main.rs"

[[bin]]
name = "keel-serve"
path = "src/bin/keel-serve.rs"

[dependencies]
keel-contracts = { path = "../keel-contracts" }
keel-kernel = { path = "../keel-kernel" }
keel-middleware = { path = "../keel-middleware" }
keel-adapters = { path = "../keel-adapters" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
